# exemplar-trace-sample-python

./: README.md  README.rst  pyproject.toml
exemplar_trace_sample/: main.py
opencensus_demo/: main.py
tests/: test_exemplar_trace_sample.py
