[tool.poetry]
name = "exemplar-trace-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencensus = "^0.7.12"
opencensus-ext-stackdriver = "^0.7.4"
google-auth = "^1.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
autopep8 = "^1.5.5"

[tool.poetry.scripts]
main = "exemplar_trace_sample.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
